WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42418
Handle failed loads correctly
https://bugs.webkit.org/show_bug.cgi?id=42418
Summary
Handle failed loads correctly
Anders Carlsson
Reported
2010-07-15 15:56:16 PDT
Handle failed loads correctly
Attachments
Patch
(11.84 KB, patch)
2010-07-15 16:03 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-07-15 16:03:43 PDT
Created
attachment 61740
[details]
Patch
Anders Carlsson
Comment 2
2010-07-28 16:35:50 PDT
Committed
r63484
: <
http://trac.webkit.org/changeset/63484
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug