WebKit2/WebProcess/Plugins/DummyPlugin.cpp
@@ -83,4 +83,8 @@ void DummyPlugin::streamDidReceiveResponse(uint64_t streamID, const WebCore::KUR
 {
 }
 
+void DummyPlugin::streamDidFail(uint64_t streamID, bool wasCancelled)
+{
+}
+
 } // namespace WebKit
