WebKit2/WebProcess/Plugins/DummyPlugin.h
@@ -51,6 +51,8 @@ private:
     virtual void didEvaluateJavaScript(uint64_t requestID, const WebCore::String& requestURLString, const WebCore::String& result);
     virtual void streamDidReceiveResponse(uint64_t streamID, const WebCore::KURL& responseURL, uint32_t streamLength, 
                                           uint32_t lastModifiedTime, const WebCore::String& mimeType, const WebCore::String& headers);
+    virtual void streamDidFail(uint64_t streamID, bool wasCancelled);
+
     virtual PluginController* controller();
 };
 
