WebKit2/WebProcess/Plugins/Netscape/NetscapePluginStream.h
@@ -55,6 +55,7 @@ public:
 
     void didReceiveResponse(const WebCore::KURL& responseURL, uint32_t streamLength,
                             uint32_t lastModifiedTime, const WebCore::String& mimeType, const WebCore::String& headers);
+    void didFail(bool wasCancelled);
 
     void sendJavaScriptStream(const WebCore::String& requestURLString, const WebCore::String& result);
 
@@ -67,6 +68,7 @@ private:
                uint32_t lastModifiedTime, const WebCore::String& mimeType, const WebCore::String& headers);
     void stop(NPReason);
 
+    void cancel();
     void notifyAndDestroyStream(NPReason);
 
     void deliverData(const char* bytes, int length);
