WebKit2/WebProcess/Plugins/Plugin.h
@@ -77,6 +77,9 @@ public:
     virtual void streamDidReceiveResponse(uint64_t streamID, const WebCore::KURL& responseURL, uint32_t streamLength, 
                                           uint32_t lastModifiedTime, const WebCore::String& mimeType, const WebCore::String& headers) = 0;
 
+    // Tells the plug-in that a stream has failed to load, either because of network errors or because the load was cancelled.
+    virtual void streamDidFail(uint64_t streamID, bool wasCancelled) = 0;
+
     // Returns the plug-in controller for this plug-in.
     // FIXME: We could just have the controller be a member variable of Plugin.
     virtual PluginController* controller() = 0;
