WebKit2/WebProcess/Plugins/PluginView.cpp
@@ -83,9 +83,9 @@ private:
         : m_pluginView(pluginView)
         , m_streamID(streamID)
         , m_request(request)
+        , m_streamWasCancelled(false)
     {
     }
-
     // NetscapePluginStreamLoaderClient
     virtual void didReceiveResponse(NetscapePlugInStreamLoader*, const ResourceResponse&);
     virtual void didReceiveData(NetscapePlugInStreamLoader*, const char*, int);
@@ -95,6 +95,10 @@ private:
     RefPtr<PluginView> m_pluginView;
     uint64_t m_streamID;
     const ResourceRequest m_request;
+    
+    // True if the stream was explicitly cancelled by calling cancel().
+    // (As opposed to being cancelled by the user hitting the stop button for example.
+    bool m_streamWasCancelled;
     
     RefPtr<NetscapePlugInStreamLoader> m_loader;
 };
@@ -117,6 +121,7 @@ void PluginView::Stream::cancel()
 {
     ASSERT(m_loader);
 
+    m_streamWasCancelled = true;
     m_loader->cancel(m_loader->cancelledError());
     m_loader = 0;
 }
@@ -170,7 +175,15 @@ void PluginView::Stream::didReceiveData(NetscapePlugInStreamLoader*, const char*
 
 void PluginView::Stream::didFail(NetscapePlugInStreamLoader*, const ResourceError& error) 
 {
-    // FIXME: Implement.
+    // We don't want to call streamDidFail if the stream was explicitly cancelled by the plug-in.
+    if (m_streamWasCancelled)
+        return;
+
+    // Calling streamDidFail could cause us to be deleted, so we hold on to a reference here.
+    RefPtr<Stream> protect(this);
+
+    m_pluginView->m_plugin->streamDidFail(m_streamID, error.isCancellation());
+    m_pluginView->removeStream(this);
 }
 
 void PluginView::Stream::didFinishLoading(NetscapePlugInStreamLoader*)
